--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </header>
 <main>
 	<div id="banner">
-		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+		<img id="slideImage" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<div class="arrow">
-			<img class="arrow_left" src="./assets/images/arrow_left.png" alt="Arrow left">
-			<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-			<img class="arrow_right" src="./assets/images/arrow_right.png" alt="Arrow right">
+			<img id="arrow_left" src="./assets/images/arrow_left.png" alt="Arrow left">
+			<p id="slideText">Impressions tous formats <span>en boutique et en ligne</span></p>
+			<img id="arrow_right" src="./assets/images/arrow_right.png" alt="Arrow right">
 		</div>
 		<div class="dots">
 			<div class="dot"></div>
@@ -132,6 +132,7 @@
 		<img class="footer-logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises" >
 	</div>
 </footer>
-<script src="./assets/script.js"></script>
+<script src =JavaScript/config.js></script>
+<script src =JavaScript/script.js></script>
 </body>
 </html>
