V 0.4 Add : de la fonction updateSlide js qui permet de faire une boucle infinie à chaque qu'on clique pour changer de slide .

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </header>
 <main>
 	<div id="banner">
-		<img id="slideImage" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+		<img class="slideImage" src="" alt="Banner Print-it">
 		<div class="arrow">
-			<img id="arrow_left" src="./assets/images/arrow_left.png" alt="Arrow left">
-			<p id="slideText">Impressions tous formats <span>en boutique et en ligne</span></p>
-			<img id="arrow_right" src="./assets/images/arrow_right.png" alt="Arrow right">
+			<img class="arrow_left" src="./assets/images/arrow_left.png" alt="Arrow left">
+			<p class="slideText">Impressions tous formats <span>en boutique et en ligne</span></p>
+			<img class="arrow_right" src="./assets/images/arrow_right.png" alt="Arrow right">
 		</div>
 		<div class="dots">
 			<div class="dot"></div>
