V 0.5 Improvement : réroganisation du dossier et de ses fichiers js.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
 		<img class="footer-logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises" >
 	</div>
 </footer>
-<script src =JavaScript/config.js></script>
-<script src =JavaScript/script.js></script>
+<script src =scripts/config.js></script>
+<script src =scripts/script.js></script>
+<script src =scripts/main.js></script>
 </body>
 </html>
