--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Slab:wght@400;900&display=swap" rel="stylesheet">
+	<!-- defer permet que la page se charge pour ensuite interagir sur le DOM -->
+	<script src="scripts/config.js" defer></script> 
+	<script src="scripts/script.js" defer></script>
+	<script src="scripts/main.js" defer></script>
 </head>
 <body>
 <header class="container">
@@ -21,15 +25,10 @@
 		<img class="slideImage" src="" alt="Banner Print-it">
 		<div class="arrow">
 			<img class="arrow_left" src="./assets/images/arrow_left.png" alt="Arrow left">
-			<p class="slideText">Impressions tous formats <span>en boutique et en ligne</span></p>
+			<p class="slideText"></p>
 			<img class="arrow_right" src="./assets/images/arrow_right.png" alt="Arrow right">
 		</div>
 		<div class="dots">
-			<div class="dot"></div>
-			<div class="dot"></div>
-			<div class="dot"></div>
-			<div class="dot"></div>
-			<div class="dot_selected"></div>
 		</div>
 	</div>
 	<section id="about-us" class="container">
@@ -132,8 +131,5 @@
 		<img class="footer-logo" src="./assets/images/logo.png" alt="Print it ! Impressions d'entreprises" >
 	</div>
 </footer>
-<script src =scripts/config.js></script>
-<script src =scripts/script.js></script>
-<script src =scripts/main.js></script>
 </body>
 </html>
